tests/error/unMapData.uplc
(program 0.0.0 [(builtin unMapData) (con data { List [ Integer 0, Integer 1 ] })])
